Fix doc navbar z-index

--- a/packages/docs/.vuepress/styles/index.styl
+++ b/packages/docs/.vuepress/styles/index.styl
@@ -55,5 +55,5 @@
 }
 
 .navbar {
-  z-index: 1000;
+  z-index: 40;
 }
